--- a/package.json
+++ b/package.json
@@ -1,3 +1,11 @@
 {
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "lint": "eslint . --ext .ts"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.50.0"
+  }
 }
