--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3"
+  },
+  "dependencies": {
+    "better-sqlite3": "^12.0.0"
   }
 }
